Only apply overflow on mobile widgets Fix awkward padding right scroll issue

--- a/styles/layout/widgets.module.css
+++ b/styles/layout/widgets.module.css
@@ -4,8 +4,6 @@
 }
 
 .wrapper {
-  scroll-snap-type: x mandatory;
-  overflow-x: scroll;
   padding-left: var(--space-m);
   padding-right: var(--space-m);
   margin-bottom: var(--space-m);
@@ -18,6 +16,19 @@
   padding-top: 2.5rem;
   margin: 0 auto var(--space-s);
   max-width: none;
+}
+
+@media (max-width: 749px) {
+  .wrapper {
+    overflow-x: scroll;
+    scroll-snap-type: x mandatory;
+  }
+
+  .grid > :last-child {
+    /* forcing this disobedient child to obey the padding-right of it's parent */
+    padding-right: var(--space-m);
+    width: calc(100% + var(--space-m));
+  }
 }
 
 .grid > * {
